database: fix rbac and credentials

--- a/kubernetes/talos-flux/apps/cloud/nextcloud/secret-psql-nextcloud.sops.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/secret-psql-nextcloud.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     namespace: cloud
 type: Opaque
 stringData:
-    db-password: ENC[AES256_GCM,data:N4yo7oTBAL2+yhaFX2cgq4SAsaAz6W/V+T6S5E/yrz6fwui4a9JF+cl0qj0sF2+u,iv:83/9RBmfuD+G9dfQNFxDor/xmf7OGksjlpOSeSsPezY=,tag:xEexv13wxKmEWnZo5uHj4A==,type:str]
-    db-username: ENC[AES256_GCM,data:DZdod86oVIbYgY+I,iv:b9YCbkZsavNtjc9RHBAMk51ckf0ISi073+gj+xKsXUI=,tag:ZVOlpkq5YMr6jWWfVoEHAA==,type:str]
+    db-password: ENC[AES256_GCM,data:K5DZCAo2Mf+7vCit7xEPHrfbwQ0tzrMHZNv6/JeILpRILcw=,iv:dg3YBI3h1FBRJMKIl5eBWPcKFPiu6PF08Z4JX3g+7lY=,tag:LstLVy+0TZfHZgaedrQ0wg==,type:str]
+    db-username: ENC[AES256_GCM,data:EchtsN3N1oEh,iv:vkpEhlzu4kSj8/U/R/RwWX4gLRkPtQYVqalKXMTiqiU=,tag:jckwQ2zf78TzowDBILOhGQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             Ri9jdW1nNmlhT09NV0JxT3VRU08wdVUKwp97oURgT8PLOjvmcFEfVBBiBeHp65Wx
             8mP/CLD2ldCCl8abhWaasmpHbh8mWjxBh72BD1NuzdVfj/3zP9ZS2g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-16T14:39:28Z"
-    mac: ENC[AES256_GCM,data:8QFe0qCv/l9IQEH55WaE1IOMQDcYThrYTgldFn8mKfxCC5Cu8dCrt0HRxnjxgsJ3BEYVO63oWQ9UhSYHhO4CjNwLPiQfzVWgdg2xmpZeO9dkxypCNFG2a67FTuEoBew4KeWQQfxsNSKYRJChKjJIUrnQLb3syxAA/WBmlcfIQME=,iv:0mWczHldU0TuiMYfbdTV1bx5ykLKMO+dsB4OhZY3uNc=,tag:q5ETiac8TXXJ7QNKoJHoJw==,type:str]
+    lastmodified: "2025-03-18T11:48:30Z"
+    mac: ENC[AES256_GCM,data:U+way+6Ei5spIuM838gCAcqnPxCanpkQZsPkbGNzcw8qcAr9kVe3FHgHl+fRgr5YBefnb0DPuIb8AeYiQO4yoJQKzWwHVc0+lmitOVBmn/y9OsGC3FNVROkGdUlcs7jsxy/lJLat6zjFwigh2sbLTc0jJxuPP6WauNeTDfN6Kng=,iv:vvcr2vlcm8BlOr1tbgWE3yvIZT6cRT4KR+0NQHby4CQ=,tag:xew5nw6PX1kcDXNgZXYHOA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.4
