--- a/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/postgres-superuser-secret.sops.yaml
+++ b/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/postgres-superuser-secret.sops.yaml
@@ -1,11 +1,10 @@
-# yamllint disable
 apiVersion: v1
 kind: Secret
 type: kubernetes.io/basic-auth
 metadata:
     name: postgres-superuser
 stringData:
-    username: ENC[AES256_GCM,data:aq/8AG/ahg==,iv:tDmQBMsv08GL+X7mqzyn1AM0x4Jv77liTXeH6CnHC5A=,tag:SeigQ2U+DzGUjvLms2BBTQ==,type:str]
+    username: ENC[AES256_GCM,data:hqwiPEWR4HE=,iv:o56ga1wSbpTKsmSw1Dto+swBkDvkRPmEAExtL7JuPUk=,tag:DnBNfgBq/3WbIbKj21wLtA==,type:str]
     password: ENC[AES256_GCM,data:z8O6onF3PIH6T0EhZmtQ0IKemFdBBA==,iv:xYaHO7d3+ytd8pVe4ra1itevAzcXlR5DXe+fvc/Y++g=,tag:LQAnP0Nfa700HVE7wrYmDg==,type:str]
 sops:
     kms: []
@@ -15,15 +14,15 @@ sops:
     age:
         - recipient: age15gfkljk0c50s57t86eu6gdzxenpqrn4frlmd5vwcv57w962w2cfswxz4ge
           enc: |
-              -----BEGIN AGE ENCRYPTED FILE-----
-              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBZDJzWFVLWWhqYm01bHlB
-              RjVoWW5ZV2tqbzBldHRiL1lieUQ5V01RMUZrCjVxUlNkcGZ3OVFTQVJVZVRXam9K
-              anJhRy9LN2NoNUhzWVZ3UzkzTktSclkKLS0tIE1sUld0N3BKY2c4Y3k4N21tNDhJ
-              YVpaeEdGRDZSSHYzQXBHalRXL1hWV0UKWGk+ZtKy20URm7TyllfoWAXrFW8fzaW9
-              PUozsK7sWzgKg/UDYp8PbSA7pIUdRwb9rcuxcff6NGfVtoI8kDxYXw==
-              -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-09-09T15:46:10Z"
-    mac: ENC[AES256_GCM,data:CopGF5xBiAGBUvXMdGECMkP+hCRlpL4c+KKVDxJ12jR2op5QH9ppJnhOqD1VhPvI3/jGtJBNKYDNu/BZ4WnDCMy2cT4zNHh6x2J2Hv7ibu+eDmAeaWdFyL44cB+OJSNH8SU+nOIB00mvS7co0cRTmZxzpHgjnLGVrSpS/hSRSos=,iv:EdXwcBuZGXHMnj9d+uMnihUi8HgEneDpOUHZ2SiM7nM=,tag:Q7k8OsEL3kZjLYdvXzaopg==,type:str]
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBZDJzWFVLWWhqYm01bHlB
+            RjVoWW5ZV2tqbzBldHRiL1lieUQ5V01RMUZrCjVxUlNkcGZ3OVFTQVJVZVRXam9K
+            anJhRy9LN2NoNUhzWVZ3UzkzTktSclkKLS0tIE1sUld0N3BKY2c4Y3k4N21tNDhJ
+            YVpaeEdGRDZSSHYzQXBHalRXL1hWV0UKWGk+ZtKy20URm7TyllfoWAXrFW8fzaW9
+            PUozsK7sWzgKg/UDYp8PbSA7pIUdRwb9rcuxcff6NGfVtoI8kDxYXw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2025-03-18T12:29:33Z"
+    mac: ENC[AES256_GCM,data:/QbBVFLw6YWzXt/HHDuCZISsMpXrcj/mOyMd844RqJJBSgouCP4NwKJ8smVHI3+FXL9BoIeAH8EJ7dAKImgI+RPA4rU/VSb9PViuxT+gHfXSgNbtas0J51wsiP/rk9hhPD/4kPUYmRBk6/fFDHNed0hDU3fEr1ZBjjY5kUdokS4=,iv:LKGNvPSdT+qqF/LlVuffqzjCTFMBCpZLVz5LjOsqsP8=,tag:AUMjqF87Vi4gfdsnnCoU0A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.9.0
+    version: 3.9.4
