--- a/kubernetes/talos-flux/apps/cloud/nextcloud/secret-nextcloud.sops.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/secret-nextcloud.sops.yaml
@@ -11,6 +11,7 @@ stringData:
     smtp-password: ENC[AES256_GCM,data:CaSmr5cEwPF7JI2LRM78LPyw,iv:O2mpSR9SB2O9N7W2iGO6jK/lwcW7ye9sozzKcfoWdJY=,tag:7fi2kbbKQw+NJ2iQLUN2TA==,type:str]
     smtp-host: ENC[AES256_GCM,data:zoibzARlIN5N0rrCqSVyUrFZizDb,iv:O+np3kJ3qbwVG6pdzCrwRLwev55XS/u734AULrKJWyo=,tag:FxWMZGdyVOR54eQxNNSRwA==,type:str]
     redisPassword: ENC[AES256_GCM,data:fzZ9n/e7/3n0IdcVzzwATOpLgq4Srlwz,iv:Z9dCKBi+Lwj4PrQqxuVx1hShndP3U28zOsDJCEQeavo=,tag:6iNcJswq7GeAKWVjpGSQDA==,type:str]
+    redisConnectionString: ENC[AES256_GCM,data:KB2QaX6jXRN86gE2i7F29Zk+u8531Vl9G2dTgjD0NCfi4hw7fz2QIrB2dtLsl1pCEYsV6+14aRnz,iv:anbh67sjAR7PWs9FiO5huXB6YwxlxjFoo+Ob9NF6ufU=,tag:auJTiAZ4JdGemncVLiUR0A==,type:str]
     nextcloud-token: ENC[AES256_GCM,data:VfzeX2dWKwwoXoE4NisLB5/wnLV5Tfh9e/r5vxdDr7K/3RDBtZt3/MhXlw2p7a6H8+CtbFMblghiMmdnoizUdA==,iv:pKaAzCJChURsd72hMpy6nZ3t6shX8nlyPUZFvM5iWVQ=,tag:NeluB+suhpoSEiq33bBAow==,type:str]
 sops:
     kms: []
@@ -20,15 +21,15 @@ sops:
     age:
         - recipient: age15gfkljk0c50s57t86eu6gdzxenpqrn4frlmd5vwcv57w962w2cfswxz4ge
           enc: |
-              -----BEGIN AGE ENCRYPTED FILE-----
-              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3NGQ1eVFxQW8yeFFaRWJ3
-              Uk1CTm16cUdEQ1FxaTBSMExQTlNORWJnbmpnCjU3Ty9nRlhaUnFtcXhqT3pONU9W
-              UkdRUTQxa0pIc1N2MWt2NXBadXFpZlUKLS0tIDAwWG1KSzkxMDl5dHNORkljK2I4
-              SW9FbTloL3g0NVZFNE5nVVFid01rck0Kc2elyIP4knEulOM7POCC0RnOHF41aToc
-              ZzI5dCO5yQYmUqh8EJZso7HUbItcE5SxTJ0AL51RwTMt+PPriy5KKw==
-              -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-16T15:33:37Z"
-    mac: ENC[AES256_GCM,data:J1dvKp+orVFrr8hVRixtNLX/HMmKEiFcRgmJ8FLFAfVu0p3RA/b+RaHrEJgOXk9iFN6vXU5Sup0ptNqt0x3+xvai9KdqMB+2RSV8nxEyQozv5NAvQ0ZetoJCDRI4V37hwcclnfH6cD4hDc8XQKzpy2yk2FShyMMwkgIHGnMWtYo=,iv:uVy8HSg7q62A1X7OWfNA+jfSW/zRoUjkvzhLR40D9qw=,tag:MlnAFgEBpTkF0p1yDdLYVg==,type:str]
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3NGQ1eVFxQW8yeFFaRWJ3
+            Uk1CTm16cUdEQ1FxaTBSMExQTlNORWJnbmpnCjU3Ty9nRlhaUnFtcXhqT3pONU9W
+            UkdRUTQxa0pIc1N2MWt2NXBadXFpZlUKLS0tIDAwWG1KSzkxMDl5dHNORkljK2I4
+            SW9FbTloL3g0NVZFNE5nVVFid01rck0Kc2elyIP4knEulOM7POCC0RnOHF41aToc
+            ZzI5dCO5yQYmUqh8EJZso7HUbItcE5SxTJ0AL51RwTMt+PPriy5KKw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2025-03-18T23:57:39Z"
+    mac: ENC[AES256_GCM,data:VLrDb/vxnDnFSOCz8H1TtSkZ8TEH8fBZY/m32a2pZOxZdDBzNBwVLRwDhTkDJxu5epIC+NSLN50mM34fxhJYfA9ZVA0T8Df6wtxwYoE6/2uAT7Yy6eJWJ8yx1c7/BIAjWdZ505BfhRIhzODPpuN+ZILepr9Tt9WEkMnrwsswcBc=,iv:jSMegAfCSEKjh734iOu+aSaJPQg0NSmhqKcYKApvoYY=,tag:vcpQ1bnPQj8AR3NivLjp6g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.4
