--- a/kubernetes/talos-flux/apps/cloud/nextcloud/secret-psql-nextcloud.sops.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/secret-psql-nextcloud.sops.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+papiVersion: v1
 kind: Secret
 metadata:
     name: psql-nextcloud
@@ -7,6 +7,7 @@ type: Opaque
 stringData:
     db-password: ENC[AES256_GCM,data:K5DZCAo2Mf+7vCit7xEPHrfbwQ0tzrMHZNv6/JeILpRILcw=,iv:dg3YBI3h1FBRJMKIl5eBWPcKFPiu6PF08Z4JX3g+7lY=,tag:LstLVy+0TZfHZgaedrQ0wg==,type:str]
     db-username: ENC[AES256_GCM,data:EchtsN3N1oEh,iv:vkpEhlzu4kSj8/U/R/RwWX4gLRkPtQYVqalKXMTiqiU=,tag:jckwQ2zf78TzowDBILOhGQ==,type:str]
+    dbConnectionstring: ENC[AES256_GCM,data:vYGqfVzItYTXKV+Jv7bNozQfnAAWn9S3Ck+7pgT2OitXkvmA1/o5GANGdMLh60rQN67PLGvVb2IqvPhWOaESQ+2rhIzUQPBo,iv:WlPWXCt+D7xlQWDj7/NeneFR+SQ9V9LV3iQr8TrnyPE=,tag:o6q+36D6Cianj+xx6ntLoQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +23,8 @@ sops:
             Ri9jdW1nNmlhT09NV0JxT3VRU08wdVUKwp97oURgT8PLOjvmcFEfVBBiBeHp65Wx
             8mP/CLD2ldCCl8abhWaasmpHbh8mWjxBh72BD1NuzdVfj/3zP9ZS2g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-18T11:48:30Z"
-    mac: ENC[AES256_GCM,data:U+way+6Ei5spIuM838gCAcqnPxCanpkQZsPkbGNzcw8qcAr9kVe3FHgHl+fRgr5YBefnb0DPuIb8AeYiQO4yoJQKzWwHVc0+lmitOVBmn/y9OsGC3FNVROkGdUlcs7jsxy/lJLat6zjFwigh2sbLTc0jJxuPP6WauNeTDfN6Kng=,iv:vvcr2vlcm8BlOr1tbgWE3yvIZT6cRT4KR+0NQHby4CQ=,tag:xew5nw6PX1kcDXNgZXYHOA==,type:str]
+    lastmodified: "2025-03-18T23:59:35Z"
+    mac: ENC[AES256_GCM,data:b+jwIaWEZRgUsXeAj4xiNofnNH8clRMX85ymSVzAh4/x3MAytDepQem+umw1YcFsbBbth4b5tRH1zZ9eyU7xJ8MXeBhOQZVLO1yFKtcPuziczRWpai3Yb/miUcAOsxXYU/z8VqgNuIb/yRNPO1TksdHhnBYlxjqmrsKF+XZA/lo=,iv:OYx2Y4WPaIpWru5sn9Za9l0YbQAboG63n7QpvmpPc4A=,tag:CM16dt5I8zQyT/hyZ/oTJw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.4
