Enable CiliumEnvoyConfig CRD

--- a/kubernetes/talos-flux/apps/kube-system/cilium/app/values.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/app/values.yaml
@@ -39,7 +39,6 @@ ingressController:
   # For granular control, use the following annotations on the ingress resource:
   # "ingress.cilium.io/loadbalancer-mode: dedicated" (or "shared").
   loadbalancerMode: shared
-  defaultSecretName: wc-tls
   defaultSecretNamespace: cert-manager
   enforceHttps: false
   service:
@@ -107,3 +106,6 @@ cgroup:
   autoMount:
     enabled: false
   hostRoot: "/sys/fs/cgroup"
+
+envoyConfig:
+  enabled: false
