app-nextcloud: enable nextcloud-push and logging sidecar

--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 namespace: cloud
 resources:
   - helm-release.yaml
+  - cm-nextcloud-push.yaml
 configMapGenerator:
   - name: nextcloud-helm-values
     namespace: cloud
