--- a/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/cluster16.yaml
+++ b/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/cluster16.yaml
@@ -5,7 +5,7 @@ kind: Cluster
 metadata:
   name: postgres16
 spec:
-  instances: 3
+  instances: 1
   imageName: ghcr.io/cloudnative-pg/postgresql:16.4-7
   primaryUpdateStrategy: unsupervised
   storage:
@@ -47,14 +47,10 @@ spec:
 
   bootstrap:
     initdb:
-      import:
-        type: monolith
-        databases:
-          - "*"
-        roles:
-          - "*"
-        source:
-          externalCluster: postgres-v1
+      database: postgres
+      owner: postgres
+      secret:
+        name: postgres-superuser
 
   externalClusters:
     - name: postgres-v1
@@ -66,3 +62,12 @@ spec:
       password:
         name: postgres-superuser
         key: password
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres16
+  namespace: database
+spec:
+  storageClassName: openebs-hostpath
