!Fix cloudnative-pg cluster pvc and connection string

--- a/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/database-server.yaml
+++ b/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/database-server.yaml
@@ -13,6 +13,6 @@ kind: DatabaseServer
 metadata:
   name: postgres15
 spec:
-  connString: "host=postgres15-rw.database.svc.cluster.local"
+  connString: "host=postgres15-rw.database.svc.cluster.local  dbname=postgres"
   credentials:
     basicAuthSecretRef: postgres-superuser
