database: fix pvc

--- a/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/cluster16.yaml
+++ b/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/cluster16.yaml
@@ -71,5 +71,5 @@ metadata:
   namespace: database
 spec:
   storageClassName: openebs-hostpath
-  accessMode: ReadWriteOnly
+  accessMode: ReadWriteOnce
   size: 30Gi
