--- a/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/cluster15.yaml
+++ b/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/cluster15.yaml
@@ -31,5 +31,8 @@ metadata:
   namespace: database
 spec:
   storageClassName: openebs-hostpath
-  accessMode: ReadWriteOnly
-  size: 30Gi
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 30Gi
