--- a/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/cluster16.yaml
+++ b/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/cluster16.yaml
@@ -71,5 +71,8 @@ metadata:
   namespace: database
 spec:
   storageClassName: openebs-hostpath
-  accessMode: ReadWriteOnce
-  size: 30Gi
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 30Gi
