--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,6 +61,8 @@ repos:
 
   - repo: https://github.com/adrienverge/yamllint
     rev: v1.35.1
+    stages:
+      - pre-commit
     hooks:
       - id: yamllint
         args:
@@ -70,12 +72,16 @@ repos:
 
   - repo: https://github.com/Lucas-C/pre-commit-hooks
     rev: v1.5.5
+    stages:
+      - pre-commit
     hooks:
       - id: remove-crlf
       - id: remove-tabs
 
   - repo: https://github.com/sirosen/texthooks
     rev: 0.6.7
+    stages:
+      - pre-commit
     hooks:
       - id: fix-smartquotes
       - id: fix-ligatures
@@ -83,6 +89,8 @@ repos:
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.42.0
+    stages:
+      - pre-commit
     hooks:
       - id: markdownlint-fix
         args:
@@ -92,6 +100,8 @@ repos:
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8
+    stages:
+      - pre-commit
     hooks:
       - id: prettier
         args:
@@ -115,11 +125,16 @@ repos:
 
   - repo: https://github.com/zricethezav/gitleaks
     rev: v8.24.0
+    stages:
+      - pre-commit
+      - pre-push
     hooks:
       - id: gitleaks
 
   - repo: https://github.com/tarioch/flux-check-hook
     rev: v0.5.0
+    stages:
+      - pre-commit
     hooks:
       - id: check-flux-helm-values
         exclude: |
