--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/kustomization.yaml
@@ -6,6 +6,8 @@ namespace: cloud
 resources:
   - helm-release.yaml
   - cm-nextcloud-push.yaml
+  - cm-pre-upgrade.yaml
+  - cm-post-upgrade.yaml
 configMapGenerator:
   - name: nextcloud-helm-values
     namespace: cloud
