nextcloud: fix filenames for kustomization

--- a/kubernetes/talos-flux/apps/mollysocket/app/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/mollysocket/app/kustomization.yaml
@@ -9,7 +9,7 @@ configMapGenerator:
   - name: values-mollysocket
     namespace: cloud
     files:
-      - values-mollysocket.yaml
+      - values.yaml=values-mollysocket.yaml
 configurations:
   - kustomizeconfig.yaml
 generatorOptions:
