--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/values.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/values.yaml
@@ -325,7 +325,7 @@ nextcloud:
         - 'while ! test -f "/run/nextcloud/data/nextcloud.log"; do sleep 1; done; tail -n+1 -f /run/nextcloud/data/nextcloud.log;'
       volumeMounts:
         - name: nextcloud-data
-          mountPath: /run/nextcloud/data
+          mountPath: /run/nextcloud/
 
     - name: nextcloud-push
       image: nextcloud/aio-notify-push
@@ -333,9 +333,15 @@ nextcloud:
         - name: push-scripts
           mountPath: /
       securityContext:
-        allowPrivilegeEscalation: false
+        fsGroup: 33
+        fsGroupChangePolicy: "OnRootMismatch"
+        runAsUser: 33
+        runAsGroup: 33
+        runAsNonRoot: true
         capabilities:
           drop: ["ALL"]
+        seccompProfile:
+          type: RuntimeDefault
       readinessProbe:
         exec:
           command:
