mollysocket: fix secretName

--- a/kubernetes/talos-flux/apps/mollysocket/app/values-mollysocket.yaml
+++ b/kubernetes/talos-flux/apps/mollysocket/app/values-mollysocket.yaml
@@ -103,7 +103,7 @@ ingress:
         - path: /
           pathType: ImplementationSpecific
   tls:
-    - secretName: PUSH.${SECRET_DOMAIN}-tls
+    - secretName: push.${SECRET_DOMAIN}-tls
       hosts:
         - push.${SECRET_DOMAIN}
 
