--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - helm-release.yaml
   - cm-pre-upgrade.yaml
   - cm-post-upgrade.yaml
+  - svc-nextcloud-alt.yaml
 configMapGenerator:
   - name: nextcloud-helm-values
     namespace: cloud
