nextcloud add CPU_ARCH for notify_push image [see](https://github.com/nextcloud/all-in-one/blob/main/Containers/notify-push/start.sh)

--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/values.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/values.yaml
@@ -497,6 +497,8 @@ nginx:
       value: "cloud.${SECRET_DOMAIN}"
     - name: OVERWRITECLIURL
       value: "https://cloud.${SECRET_DOMAIN}"
+    - name: CPU_ARCH
+      value: x86_64
 
 internalDatabase:
   enabled: false
